src/objects/MCAR__c.object
<CustomObject>
    <description>Material Corrective Action Report.</description>
    <fields>
        <fullName>Beijing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Factory GM of Beijing</description>
        <label>Beijing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bruchsal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Factory GM For Bruchsal</description>
        <label>Bruchsal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category_Area__c</fullName>
        <description>Category Area picklist values:
Product Procurement (PP)
Services Procurement (SP)
Indirect Procurement (IP)
Partnering Procurement (PO)</description>
        <inlineHelpText>4 Categories for NSN Global Purchasing: PP = Product Procurement, SP = Services Procurement, IP = Indirect Procurement and PO=Partnering Procurement</inlineHelpText>
        <label>Category Area</label>
        <picklist>
            <picklistValues>
                <fullName>Services Procurement (SP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indirect Procurement (IP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Procurement (PP)</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Partnering Procurement (PO)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category_Area_text__c</fullName>
        <label>Category Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Group__c</fullName>
        <label>Category Group</label>
        <picklist>
            <controllingField>Category_Area__c</controllingField>
            <picklistValues>
                <fullName>Basestation Antennas &amp; IBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Workforce Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP Transport and Microwave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT HW &amp; Care Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanics &amp; RF Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partnering Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;D and IT Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repair &amp; Spares</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;D Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF &amp; Custom Components</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard and Interconnect Components</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subcontracting NI Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITHW and Systems &amp; Embedded Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing and Manufacturing Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel &amp; Fleet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Service Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network Planning Optimization</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category_Group_text__c</fullName>
        <label>Category Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chennai__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Factory GM For Chennai</description>
        <label>Chennai</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Class_Access1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Class Access1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Class_Access2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Class Access2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Class_Access3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Class Access3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Component_Current_Location__c</fullName>
        <description>Contact name, email address or phone number and current location of returned product</description>
        <inlineHelpText>Contact name, email address or phone number and current location of returned product</inlineHelpText>
        <label>Component Current Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contributor_1D__c</fullName>
        <label>Contributor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contributor_2D__c</fullName>
        <label>Contributor(s)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contributor_3D__c</fullName>
        <description>Name of associate(s) who contributed the manufacturer&apos;s response.</description>
        <inlineHelpText>Name of associate(s) who contributed the manufacturer&apos;s response.</inlineHelpText>
        <label>3D Manufacturer Contributor(s)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Defect_Code_Group__c</fullName>
        <inlineHelpText>Defect Code Group: “Identify the Defect Code Group for this issue</inlineHelpText>
        <label>Defect Code Group</label>
        <picklist>
            <picklistValues>
                <fullName>Component Defects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Component Electrical Failures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery Defects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Filter Defects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Filter Defects (Assembly)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Findings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labels/Markings Defects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanical and Visual Defects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanics Defects (Appearance &amp; Assembly)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanics Defects (Die Casting)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanics Defects (Machining)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanics Defects (Painting)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanics Defects (Plating)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanics Defects (Sealing &amp; Thermal)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mounting and Placement Defects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Packing Defects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PWB Defects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PWB Defects (Design)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soldering Defects (Hand Assembly)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soldering Defects (SMT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit Defects</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Defect_Code__c</fullName>
        <inlineHelpText>Identify the most correct Defect Code for this issue.</inlineHelpText>
        <label>Defect Code</label>
        <picklist>
            <controllingField>Defect_Code_Group__c</controllingField>
            <picklistValues>
                <fullName>C01: Component Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C02: Incorrect Tolerance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C03: Definened Test or Tuning Not Done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C04: Package Defect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C05: Reel Defect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C06: Broken Component</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C07: Soldering Problem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C08: Obsolete Component (Age)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C09: Disqualified Component</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C10: Test Component</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C11: Component Borrowed for Investigation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C99: Other Defect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F01: Component Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F04: Component Sporadic Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F05: Component Thermal Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F99: Other Electrical Component Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R01: Missing Packing List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R02: Missing Packing Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R03: Missing or Wrong PO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R04: Packing List Missing Product Code/Version</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R05: Incorrect Quantity in PO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R06: Product Missing Code/Version</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R07: Missing Supplier Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R08: Transportation Damage, Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R09: PO Locked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R10: Wrong Material Code/Version</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R11: Incorrect Quantity in Packet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R12: Transportation Damage, Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R13: Incorrect Packing, Supplier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R14: Incorrect Packing, Forwarder</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FLEX_Tzcew__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FLEX-Tzcew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FOX_Shanghai__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FOX-Shanghai</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Facility_Company__c</fullName>
        <label>Facility Company</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Type__c</fullName>
        <label>Facility Type</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H_Facility_Name__c</fullName>
        <label>H_Facility Name</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_FAC_ATTACH__c</fullName>
        <label>Legacy_FAC_ATTACH</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Facility_Name__c</fullName>
        <label>Legacy Facility Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_IMS_Link__c</fullName>
        <label>Legacy IMS Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Manufacturer__c</fullName>
        <label>Legacy Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Originator__c</fullName>
        <label>Legacy Originator</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Part_Number__c</fullName>
        <label>Legacy Part Number</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Rsp_Attach__c</fullName>
        <label>Legacy Rsp Attach</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAREmail1__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MCAREmail2__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MCAREmail3__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MCARName1__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCARName2__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCARName3__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAR_2D_Analysis_Findings__c</fullName>
        <description>I.e. the measurement value that is out of specification; relevant findings; data shifts; out of control conditions; variations; etc.</description>
        <inlineHelpText>I.e. the measurement value that is out of specification; relevant findings; data shifts; out of control conditions; variations; etc.</inlineHelpText>
        <label>Analysis &amp; Findings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MCAR_2D_Analyst_findings__c</fullName>
        <label>Name of analyst &amp; findings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MCAR_2D_FP_isolated_method__c</fullName>
        <label>How were the failed parts isolated ?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MCAR_2D_Internal_Containment__c</fullName>
        <description>Describes actions taken internally to contain any suspected defective material</description>
        <inlineHelpText>Describes actions taken internally to contain any suspected defective material</inlineHelpText>
        <label>Internal Containment, if any?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MCAR_2D_Prob_Desc__c</fullName>
        <description>Please use definitive &amp; quantifiable terms to describe the problem, &amp; please organize all data in such a way that a comparative analysis can be performed.</description>
        <inlineHelpText>Please use definitive &amp; quantifiable terms to describe the problem, &amp; please organize all data in such a way that a comparative analysis can be performed.</inlineHelpText>
        <label>Problem Description &amp; Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MCAR_2D_failure_date__c</fullName>
        <description>Please identify the first mention of an issue, if available.</description>
        <inlineHelpText>Please identify the first mention of an issue, if available.</inlineHelpText>
        <label>Date failure first observed?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MCAR_2D_failure_spl_condition__c</fullName>
        <description>I.e. temperature, vibration, mechanical shock, etc.</description>
        <inlineHelpText>I.e. temperature, vibration, mechanical shock, etc.</inlineHelpText>
        <label>Parts fail under special conditions?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MCAR_2D_prod_level_fail_mode_del__c</fullName>
        <label>What was product-level failure mode?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MCAR_3D_Approval_Date__c</fullName>
        <label>3D Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MCAR_3D_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>3D Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MCAR_3D_Days_Allowed__c</fullName>
        <description>The MCAR Owner must select how many day are permitted for the response &amp; completion of this action</description>
        <inlineHelpText>The MCAR Owner must select how many day are permitted for the response &amp; completion of this action</inlineHelpText>
        <label>3D Days Allowed</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MCAR_3D_Due_Date__c</fullName>
        <label>3D Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MCAR_4D_Approval_Date__c</fullName>
        <label>4D Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MCAR_4D_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>4D Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MCAR_4D_Days_Allowed__c</fullName>
        <description>The MCAR Owner must select how many day are permitted for the response &amp; completion of this action</description>
        <inlineHelpText>The MCAR Owner must select how many day are permitted for the response &amp; completion of this action</inlineHelpText>
        <label>4D Days Allowed</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MCAR_4D_Due_Date__c</fullName>
        <label>4D Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MCAR_4D_Root_Cause__c</fullName>
        <description>Provide details of the ROOT CAUSE(S) (not symptoms) that created the stated Problem Description. NSN recommends using 5 Why&apos;s, Fishbone diagrams, etc.</description>
        <inlineHelpText>Provide details of the ROOT CAUSE(S) (not symptoms) that created the stated Problem Description. NSN recommends using 5 Why&apos;s, Fishbone diagrams, etc.</inlineHelpText>
        <label>4D Manufacture Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MCAR_5D_Approval_Date__c</fullName>
        <label>5D Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MCAR_5D_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>5D Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MCAR_5D_Days_Allowed__c</fullName>
        <label>5D Days Allowed</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MCAR_5D_Due_Date__c</fullName>
        <label>5D Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MCAR_5D_Permanent_Corrective_Action__c</fullName>
        <description>Actions that are implemented producing quantifiable results demonstrating that the problem has been solved and the question has been answered.</description>
        <inlineHelpText>Actions that are implemented producing quantifiable results demonstrating that the problem has been solved and the question has been answered.</inlineHelpText>
        <label>5D Manufacture Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MCAR_6D_Ver_Corr_Action_Eff__c</fullName>
        <description>Comparison against the Problem Description using Corrective Actions; validated by statistical analysis; focus on long term effects of corrective actions.</description>
        <inlineHelpText>Comparison against the Problem Description using Corrective Actions; validated by statistical analysis; focus on long term effects of corrective actions.</inlineHelpText>
        <label>6D Manufacture Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MCAR_7D_Preventive_Actions__c</fullName>
        <description>What steps will protect against future issues by eliminating global process or prevention problems; i.e. modification of systems, practices, &amp; procedures.</description>
        <inlineHelpText>What steps will protect against future issues by eliminating global process or prevention problems; i.e. modification of systems, practices, &amp; procedures.</inlineHelpText>
        <label>7D Manufacture Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MCAR_CC_Email2__c</fullName>
        <label>CC Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MCAR_CC_Email3__c</fullName>
        <label>CC Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MCAR_CC_Email4__c</fullName>
        <label>CC Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MCAR_Claims_Management_ID__c</fullName>
        <description>Related Claims Management Case, if applicable</description>
        <inlineHelpText>Related Claims Management Case, if applicable</inlineHelpText>
        <label>Claims Management ID</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAR_Closed_Date__c</fullName>
        <description>MCAR Closed/Cancelled/NTF Date</description>
        <inlineHelpText>MCAR Closed/Cancelled/NTF Date</inlineHelpText>
        <label>MCAR_Closed_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MCAR_Compl_Id__c</fullName>
        <description>Related COMPL Case, if applicable</description>
        <inlineHelpText>Related COMPL Case, if applicable</inlineHelpText>
        <label>COMPL ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>